# pyCIAM

./: .gitignore  HISTORY.rst  LICENSE  README.md  params.json  params_diaz.json  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
environment/: environment.yml
notebooks/: README.md  create-diaz-pyCIAM-inputs.ipynb  create-slr-quantile.ipynb  create-surge-lookup-tables.ipynb  data-acquisition.ipynb  download-data.ipynb  fit-movefactor.ipynb  pyCIAM-results-figures.ipynb  run-pyCIAM-diaz2016.ipynb  run-pyCIAM-slrquantiles.ipynb  run_example.sh  run_full_replication.sh  shared.py
notebooks/.ipynb_checkpoints/: collapse-sliiders-econ-to-seg-checkpoint.ipynb  create-diaz-pyCIAM-inputs-checkpoint.ipynb  create-surge-lookup-tables-checkpoint.ipynb  fit-movefactor-checkpoint.ipynb  run-pyCIAM-slrquantiles-checkpoint.ipynb  shared-checkpoint.py
notebooks/data-processing/: collapse-sliiders-to-seg.ipynb  create-diaz-pyCIAM-inputs.ipynb
notebooks/data-processing/slr/: AR6.ipynb  sweet.ipynb
notebooks/data-processing/slr/AR5/: 1-convert-mat-version.ipynb  2-generate-projected-lsl.ipynb  3-retrieve-num-gcms.ipynb  4-process-localizesl-output.ipynb  5-create-slr-quantile.ipynb  README.md
notebooks/models/: create-surge-lookup-tables.ipynb  fit-movefactor.ipynb  run-pyCIAM-diaz2016.ipynb  run-pyCIAM-slrquantiles.ipynb
notebooks/nb_logs/: data-acquisition.ipynb
notebooks/nb_logs/data-processing/slr/: AR6.ipynb
notebooks/nb_logs/models/: run-pyCIAM-slrquantiles.ipynb
notebooks/post-processing/: pyCIAM-results-figures.ipynb  zenodo-upload.ipynb
pyCIAM/: __init__.py  _utils.py  constants.py  io.py  run.py  utils.py
pyCIAM/surge/: __init__.py  _calc.py  calc.py  damage_funcs.py  lookup.py
