[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.setuptools_scm]

[project]
name = "python-CIAM"
description = "An efficient Python implementation of the Coastal Impacts and Adaptation Model (CIAM)"
readme = "README.md"
authors = [{ name = "Ian Bolliger", email = "ian@reask.earth"}, { name = "Nicholas Depsky", email = "nicholas.depsky@undp.org" }]
maintainers = [{ name = "Ian Bolliger", email = "ian@reask.earth"}]
dependencies = [
    "cloudpathlib",
    "gitpython",
    "rhg_compute_tools",
    "parameterize_jobs",
    "pint-xarray",
    "scikit-learn",
    "xarray[accel,parallel]",
    "zarr"
]
requires-python = ">=3.6"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/ClimateImpactLab/pyCIAM"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
