[metadata]
name = python-CIAM
description = An efficient Python implementation of the Coastal Impacts and Adaptation Model (CIAM)
long_description = file: README.md
long_description_content_type = text/markdown
author = Ian Bolliger, Nicholas Depsky
author_email = ian.bolliger@blackrock.com
url = https://gitlab.com/ClimateImpactLab/coastal/projects/pyciam
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
requires = cloudpathlib
           dask
           distributed
           gitpython
           numpy
           rhg_compute_tools
           pandas
           parameterize_jobs
           pint-xarray
           scipy
           scikit-learn
           xarray
           zarr
python_requires = >=3.6